--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,14 @@
   text-align: center;
 }
 
+body {
+  min-height: 100vh;
+  position: relative;
+  margin: 0;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
